--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
             border: 2px solid white;
 
-            background-image: url('홍가은.JPEG');
+            background-image: url("홍가은.JPEG");
             background-position: center;
             background-size: cover;
 
@@ -174,7 +174,7 @@
 </head>
 <body>
     <div class="wrap">
-        <div class="profile"></div>
+        <div class="profile" img src="./스파르타(프필)/홍가은.JPEG"></div>
         <h1 class="main">홍가은</h1>
         <p class="sub"> "Hellow! Welcome to my world"</p>
         <a target ="_blank" class="insta" href="https://www.instagram.com/supsilver_/">Follow my Instagram</a>
