--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
             align-items: center;
             font-size: 17px;
             text-align: center;
+	    color: black;
             
            
             text-decoration: none;
