--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 </head>
 <body>
     <div class="wrap">
-        <div class="profile" img src="홍가은.JPEG"></div>
+        <div class="profile" img src="sparta./홍가은.JPEG"></div>
         <h1 class="main">Hong Gaeun</h1>
         <p class="sub"> "Hellow! Welcome to my world"</p>
         <a target ="_blank" class="insta" href="https://www.instagram.com/supsilver_/">Follow my Instagram</a>
